# bip-pi

./: .gitignore  Makefile  README.md  cleanup.sh  colcon_build.sh  diagnose-gl.sh  diff.demo  install.sh  package.xml  pyproject.toml  setup.py  update_and_run.sh
.github/: copilot-instructions.md
config/: awareness_config.json  brains_config.json  ui_config.json
launch/: robot.py
resource/: robotics_platform
robotics_platform/: __init__.py  main.py
robotics_platform/awareness/: __init__.py  monitor.py
robotics_platform/brain/: __init__.py  language_model.py
robotics_platform/core/: __init__.py  robotics_loop.py
robotics_platform/ros2_nodes/: robot_state_node.py  ui_interface_node.py
robotics_platform/ui/: pygame_ui.py
src/awareness/: __init__.py  audio_monitoring.py  awareness.py  config.py
src/brains/: __init__.py  brains.py  langchain_agent.py
src/common/: __init__.py  messaging.py  utils.py
src/ui/: __init__.py  gl_components.py  monitoring.py  state.py  ui.py  ui_assets.py  utils.py
tests/: __init__.py  test_awareness.py  test_brains.py  test_ui.py
